feat: Added Expenses without invoice submission
